--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ ol {
 	bottom: -4px;
 	height: 2px;
 	width: 70px;
-	background: #ca1515;
+	background: #FFB550;
 	content: "";
 }
 
@@ -518,7 +518,7 @@ ol {
 
 .banner__text span {
 	font-size: 18px;
-	color: #ca1515;
+	color: #FFB550;
 	text-transform: uppercase;
 }
 
@@ -545,7 +545,7 @@ ol {
 	bottom: 0;
 	height: 2px;
 	width: 100%;
-	background: #ca1515;
+	background: #FFB550;
 	content: "";
 }
 
@@ -571,7 +571,7 @@ ol {
 }
 
 .banner__slider.owl-carousel .owl-dots button.active {
-	background: #ca1515;
+	background: #FFB550;
 }
 
 .banner__slider.owl-carousel .owl-dots button:last-child {
@@ -674,7 +674,7 @@ ol {
 	bottom: 0;
 	height: 2px;
 	width: 100%;
-	background: #ca1515;
+	background: #FFB550;
 	content: "";
 }
 
@@ -707,14 +707,14 @@ ol {
 
 .discount__text__title h2 {
 	font-size: 60px;
-	color: #ca1515;
+	color: #FFB550;
 	font-family: "Cookie", cursive;
 	line-height: 46px;
 	margin-bottom: 10px;
 }
 
 .discount__text__title h5 {
-	color: #ca1515;
+	color: #FFB550;
 	font-weight: 700;
 }
 
@@ -770,7 +770,7 @@ ol {
 
 .services__item i {
 	font-size: 36px;
-	color: #ca1515;
+	color: #FFB550;
 	position: absolute;
 	left: 0;
 	top: 4px;
@@ -982,11 +982,11 @@ ol {
 }
 
 .footer__copyright__text i {
-	color: #ca1515;
+	color: #FFB550;
 }
 
 .footer__copyright__text a:hover {
-	color: #ca1515;
+	color: #FFB550;
 }
 
 /*---------------------
@@ -1036,6 +1036,17 @@ ol {
 
 .categories .container-fluid {
 	padding-right: 5px;
+}
+
+.container-fluid-adotar {
+	padding-right: 0px;
+}
+
+.container-fluid-adotar h3 {
+	font-size: 40px;
+	color: #ffffff;
+	font-weight: 600;
+
 }
 
 .categories__item {
@@ -1095,8 +1106,37 @@ ol {
 	bottom: 0;
 	height: 2px;
 	width: 100%;
-	background: #ca1515;
+	background: #FFB550;
 	content: "";
+}
+
+.split-section {
+	position: relative;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: white;
+	font-size: 2em;
+	font-weight: bold;
+	background-size: cover;
+	background-position: center;
+}
+
+/* Dark overlay */
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
+}
+
+/* Text styling */
+.text-content {
+	position: relative;
+	z-index: 1;
 }
 
 /*---------------------
@@ -1133,7 +1173,7 @@ ol {
 	bottom: -4px;
 	height: 2px;
 	width: 100%;
-	background: #ca1515;
+	background: #FFB550;
 	content: "";
 	opacity: 0;
 }
@@ -1152,11 +1192,11 @@ ol {
 }
 
 .product__item.sale .product__item__pic .label {
-	background: #ca1515;
+	background: #FFB550;
 }
 
 .product__item.sale .product__item__text .product__price {
-	color: #ca1515;
+	color: #FFB550;
 }
 
 .product__item__pic {
@@ -1190,7 +1230,7 @@ ol {
 }
 
 .product__item__pic .label.sale {
-	background: #ca1515;
+	background: #FFB550;
 }
 
 .product__hover {
@@ -1233,7 +1273,7 @@ ol {
 }
 
 .product__hover li:hover a {
-	background: #ca1515;
+	background: #FFB550;
 }
 
 .product__hover li:hover a span {
@@ -1270,13 +1310,14 @@ ol {
 }
 
 .product__item__text {
-	text-align: center;
-	padding-top: 22px;
+	text-align: left;
+	padding-top: 10px;
 }
 
 .product__item__text h6 a {
-	font-size: 14px;
+	font-size: 22px;
 	color: #111111;
+
 }
 
 .product__item__text .rating {
@@ -1304,6 +1345,18 @@ ol {
 	color: #b1b0b0;
 	text-decoration: line-through;
 	margin-left: 4px;
+}
+
+.product__item__text button{
+	font-size: 14px;
+	color: #111111;
+	font-weight: 600;
+	border: none;
+	text-transform: uppercase;
+	display: inline-block;
+	padding: 12px 30px;
+	border-radius: 50px;
+	background: #FFB550;
 }
 
 /*---------------------
@@ -1488,14 +1541,14 @@ ol {
 	height: 14px;
 	width: 14px;
 	border-radius: 50%;
-	background: #ca1515;
+	background: #FFB550;
 	border: none;
 	outline: none;
 	cursor: pointer;
 }
 
 .filter-range-wrap .price-range .ui-slider-range {
-	background: #ca1515;
+	background: #FFB550;
 	border-radius: 0;
 }
 
@@ -1533,12 +1586,12 @@ ol {
 
 .sidebar__sizes .size__list label input:checked~.checkmark,
 .sidebar__color .size__list label input:checked~.checkmark {
-	border-color: #ca1515;
+	border-color: #FFB550;
 }
 
 .sidebar__sizes .size__list label input:checked~.checkmark:after,
 .sidebar__color .size__list label input:checked~.checkmark:after {
-	border-color: #ca1515;
+	border-color: #FFB550;
 	opacity: 1;
 }
 
@@ -1773,7 +1826,7 @@ ol {
 	display: inline-block;
 	font-size: 14px;
 	color: #ffffff;
-	background: #ca1515;
+	background: #FFB550;
 	font-weight: 600;
 	text-transform: uppercase;
 	padding: 14px 30px 15px;
@@ -1855,11 +1908,11 @@ ol {
 }
 
 .product__details__widget ul li .stock__checkbox label input:checked~.checkmark {
-	border-color: #ca1515;
+	border-color: #FFB550;
 }
 
 .product__details__widget ul li .stock__checkbox label input:checked~.checkmark:after {
-	border-color: #ca1515;
+	border-color: #FFB550;
 	opacity: 1;
 }
 
@@ -1963,7 +2016,7 @@ ol {
 }
 
 .product__details__widget ul li .size__btn label.active {
-	color: #ca1515;
+	color: #FFB550;
 }
 
 .product__details__widget ul li .size__btn label input {
@@ -2115,7 +2168,7 @@ ol {
 
 .shop__cart__table tbody tr .cart__price {
 	font-size: 16px;
-	color: #ca1515;
+	color: #FFB550;
 	font-weight: 600;
 	width: 190px;
 }
@@ -2142,7 +2195,7 @@ ol {
 
 .shop__cart__table tbody tr .cart__total {
 	font-size: 16px;
-	color: #ca1515;
+	color: #FFB550;
 	font-weight: 600;
 	width: 150px;
 }
@@ -2184,7 +2237,7 @@ ol {
 }
 
 .cart__btn a span {
-	color: #ca1515;
+	color: #FFB550;
 	font-size: 14px;
 	margin-right: 5px;
 }
@@ -2266,7 +2319,7 @@ ol {
 }
 
 .cart__total__procced ul li span {
-	color: #ca1515;
+	color: #FFB550;
 	float: right;
 }
 
@@ -2291,7 +2344,7 @@ ol {
 	color: #444444;
 	padding: 14px 0;
 	background: #f5f5f5;
-	border-top: 2px solid #ca1515;
+	border-top: 2px solid #FFB550;
 	text-align: center;
 	margin-bottom: 50px;
 }
@@ -2303,7 +2356,7 @@ ol {
 
 .coupon__link span {
 	font-size: 14px;
-	color: #ca1515;
+	color: #FFB550;
 }
 
 .checkout__form h5 {
@@ -2322,7 +2375,7 @@ ol {
 }
 
 .checkout__form .checkout__form__input p span {
-	color: #ca1515;
+	color: #FFB550;
 }
 
 .checkout__form .checkout__form__input input {
@@ -2377,11 +2430,11 @@ ol {
 }
 
 .checkout__form .checkout__form__checkbox label input:checked~.checkmark {
-	border-color: #ca1515;
+	border-color: #FFB550;
 }
 
 .checkout__form .checkout__form__checkbox label input:checked~.checkmark:after {
-	border-color: #ca1515;
+	border-color: #FFB550;
 	opacity: 1;
 }
 
@@ -2485,7 +2538,7 @@ ol {
 }
 
 .checkout__order__total ul li span {
-	color: #ca1515;
+	color: #FFB550;
 	float: right;
 }
 
@@ -2510,11 +2563,11 @@ ol {
 }
 
 .checkout__order__widget label input:checked~.checkmark {
-	border-color: #ca1515;
+	border-color: #FFB550;
 }
 
 .checkout__order__widget label input:checked~.checkmark:after {
-	border-color: #ca1515;
+	border-color: #FFB550;
 	opacity: 1;
 }
 
@@ -2658,7 +2711,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #ca1515;
+	color: #FFB550;
 }
 
 .blog__sidebar__item ul li a:hover span {
@@ -2750,7 +2803,7 @@ ol {
 .blog__details__item__title .tip {
 	font-size: 12px;
 	color: #ffffff;
-	background: #ca1515;
+	background: #FFB550;
 	text-transform: uppercase;
 	font-weight: 500;
 	display: inline-block;
@@ -2809,7 +2862,7 @@ ol {
 }
 
 .blog__details__quote {
-	border-top: 2px solid #ca1515;
+	border-top: 2px solid #FFB550;
 	position: relative;
 	padding-top: 22px;
 	margin-bottom: 20px;
@@ -2819,7 +2872,7 @@ ol {
 	height: 30px;
 	width: 30px;
 	font-size: 18px;
-	color: #ca1515;
+	color: #FFB550;
 	background: #ffffff;
 	position: absolute;
 	left: 0;
@@ -2917,7 +2970,7 @@ ol {
 	bottom: -5px;
 	height: 1px;
 	width: 100%;
-	background: #ca1515;
+	background: #FFB550;
 	content: "";
 }
 
@@ -2972,7 +3025,7 @@ ol {
 
 .blog__comment__item__text ul li i {
 	font-size: 14px;
-	color: #ca1515;
+	color: #FFB550;
 	margin-right: 5px;
 }
 
@@ -3015,7 +3068,7 @@ ol {
 
 .contact__address ul li h6 i {
 	font-size: 16px;
-	color: #ca1515;
+	color: #FFB550;
 	margin-right: 5px;
 }
 
